폴더링 변경
로컬 데이터는 presentation,
preference는 data 폴더로 이동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:exported="false" />
         <activity
             android:name=".presentation.signup.SignupActivity"
-            android:exported="false" />
+            android:exported="false">
+        </activity>
         <activity
             android:name=".presentation.login.LoginActivity"
             android:exported="true">
