--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.activity:activity-ktx:1.2.0'
     implementation 'androidx.core:core-ktx:1.12.0'
