폴더구조 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.NOWSOPTAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.main.friends.AddFriendActivity"
+            android:name=".presentation.main.friends.addfriend.AddFriendActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.main.MainActivity"
