--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
             android:exported="false" />
         <activity
             android:name=".presentation.main.MainActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".presentation.signup.SignupActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".presentation.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,12 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".presentation.signup.SignupActivity"
-            android:exported="false"></activity>
-        <activity
-            android:name=".presentation.login.LoginActivity"
-            android:exported="false"></activity>
     </application>
 
 </manifest>
