--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     implementation 'androidx.navigation:navigation-runtime-ktx:2.7.7'
     implementation 'androidx.navigation:navigation-compose:2.7.7'
-
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
+    implementation 'androidx.compose.runtime:runtime-livedata:'
+    implementation 'androidx.compose.material:material:1.6.5'
 
 }
