--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,25 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NOWSOPTAndroid"
         tools:targetApi="31">
+
         <activity
-            android:name=".presentation.main.MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.NOWSOPTAndroid" />
-        <activity
-            android:name=".presentation.main.MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.NOWSOPTAndroid" />
-        <activity
-            android:name=".presentation.signup.SignUpActivity"
-            android:exported="false"
-            android:label="@string/title_activity_sign_in"
-            android:theme="@style/Theme.NOWSOPTAndroid" />
-        <activity
-            android:name=".presentation.login.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_main"
             android:theme="@style/Theme.NOWSOPTAndroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
