--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     implementation 'androidx.compose.runtime:runtime-livedata:'
     implementation 'androidx.compose.material:material:1.6.5'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
+    implementation("io.coil-kt:coil-compose:2.4.0")
+
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
